# dapla-toolbelt

./: .bumpversion.cfg  .cookiecutter.json  .cruft.json  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  Pipfile  README.md  SECURITY.md  auth.py  azure-pipelines.yml  demo.ipynb  files.py  flake.nix  guardian.py  noxfile.py  pyproject.toml  setup.py  sonar-project.properties  test_dapla.py  toolbelt.py  tox.ini  utils-2.py
.github/workflows/: constraints.txt  release.yml  release.yml.rej  tests.yml  tests.yml.rej  unit-tests.yml
dapla/: __init__.py  auth.py  backports.py  collector.py  converter.py  doctor.py  files.py  gcs.py  git.py  guardian.py  jupyterhub.py  pandas.py  pubsub.py  statbank.py
dapla/spark/: __init__.py  sparkui.py
dapla_toolbelt/: __init__.py  files.py  guardian.py
docs/: conf.py  index.md  reference.md
nix/: utils.nix
nix/overlays/alejandra/: remove-ads.patch
nix/overlays/arrow-cpp/: default.nix
nix/overlays/cryptography/: default.nix
nix/overlays/css-html-js-minify/: default.nix
nix/overlays/nox-poetry/: default.nix  package.nix
nix/overlays/sphinx-theme-builder/: default.nix  package.nix
src/dapla/: __init__.py  auth.py  backports.py  collector.py  const.py  converter.py  doctor.py  files.py  gcs.py  git.py  gsm.py  guardian.py  jupyterhub.py  pandas.py  pubsub.py
src/dapla/spark/: sparkui.py
tests/: __init__.py  test_auth.py  test_backports.py  test_collector.py  test_converter.py  test_doctor.py  test_files.py  test_gcs.py  test_git.py  test_gsm.py  test_guardian.py  test_init.py  test_pandas.py  test_pubsub.py  test_statbank.py
tests/data/: fruits.parquet  people.xlsx  students.xml
tests/data/partition/: part-00000-d2924cb4-ae44-4401-8bfd-b67a4c9ab9ce-c000.snappy.parquet  part-00001-d2924cb4-ae44-4401-8bfd-b67a4c9ab9ce-c000.snappy.parquet
